--- a/src/app/company/company.component.html
+++ b/src/app/company/company.component.html
@@ -233,9 +233,9 @@
 
 
     </div>
-    <div class="plan-ex">
+    <!-- <div class="plan-ex">
       Your Plan is Expiring
-    </div>
+    </div> -->
     <div class="navbar-container" [ngClass]="{'navbar-open-container':sidebarOpen}">
       <router-outlet></router-outlet>
     </div>
