--- a/src/app/pages/layout/footer/footer.component.html
+++ b/src/app/pages/layout/footer/footer.component.html
@@ -9,14 +9,14 @@
             <div class="row">
                 <div class="col-lg-3 col-md-6 col-sm-6 ">
                     <div class="footer-logo">
-                        <a href="#">
-                            <img src="../../../../assets/images/logo.png" alt="vizion1">
+                        <a [routerLink]="['/']">
+                            <img src="../../../../assets/images/logo.png" alt="elasbot">
                         </a>
                     </div>
                     <div class="widget">
                         <div class="textwidget">
-                            <p class="mt-3">It is a long established fact that a reader will be distracted by the
-                                readable content.</p>
+                            <!-- <p class="mt-3">It is a long established fact that a reader will be distracted by the
+                                readable content.</p> -->
                         </div>
                     </div>
                 </div>
@@ -25,9 +25,9 @@
                         <h4 class="footer-title">Industries</h4>
                         <div class="menu-footer1-container">
                             <ul id="menu-footer1" class="menu">
-                                <li class="menu-item"><a href="#">About Us</a></li>
-                                <li class="menu-item"><a href="#">Support</a></li>
-                                <li class="menu-item"><a href="#">Blog</a></li>
+                                <li class="menu-item"><a href="https://elasbot.com/about_us">About Us</a></li>
+                                <!-- <li class="menu-item"><a href="#">Support</a></li> -->
+                                <li class="menu-item"><a href="https://elasbot.com/blog/">Blog</a></li>
                                 <li class="menu-item"><a href="#">Customer</a></li>
                             </ul>
                         </div>
@@ -41,7 +41,7 @@
                                 <li class="menu-item"><a href="#">Blog</a></li>
                                 <li class="menu-item"><a href="#">FAQ</a></li>
                                 <li class="menu-item"><a href="#">Leadership</a></li>
-                                <li class="menu-item"><a href="#">Terms of</a></li>
+                                <li class="menu-item"><a href="#">Terms & Conditions</a></li>
                             </ul>
                         </div>
                     </div>
@@ -69,14 +69,14 @@
                                             fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                                 d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z" />
-                                        </svg>+0123456789</a>
+                                        </svg>+91-9888222370</a>
                                 </li>
                                 <li>
-                                    <a href="mailto:support@vizion.com"><svg xmlns="http://www.w3.org/2000/svg"
+                                    <a href="mailto:support@elasbot.com"><svg xmlns="http://www.w3.org/2000/svg"
                                             width="30px" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                                 d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
-                                        </svg>support@vizion.com</a>
+                                        </svg>support@elasbot.com</a>
                                 </li>
                                 <li>
                                     <a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="30px" viewBox="0 0 20 20"
