--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -59,10 +59,10 @@
                         </div>
                         <div class="row">
                             <div class="col-sm-6">
-                                <div class="form-check">
+                                <!-- <div class="form-check">
                                     <input type="checkbox" class="form-check-input" id="exampleCheck1">
                                     <label class="form-check-label" for="exampleCheck1">Remember Me</label>
-                                </div>
+                                </div> -->
                             </div>
                             <div class="col-sm-6 text-right">
                                 <a [routerLinkActive]="['active']" [routerLink]="['/password/forget']"
